--- a/Ceriyo.Testing.Shared/Ceriyo.Testing.Shared.csproj
+++ b/Ceriyo.Testing.Shared/Ceriyo.Testing.Shared.csproj
@@ -66,6 +66,7 @@
     <Compile Include="TestHelpers.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="AppReadme\Compare-NET-Objects-Help.chm" />
     <None Include="packages.config" />
   </ItemGroup>
