--- a/Ceriyo.Game.Windows/packages.config
+++ b/Ceriyo.Game.Windows/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="4.4.0" targetFramework="net461" />
-  <package id="EmptyKeysUI_MonoGame" version="2.6.0" targetFramework="net461" />
-  <package id="log4net" version="2.0.7" targetFramework="net461" />
-  <package id="MonoGame.Extended" version="0.5.149" targetFramework="net461" />
+  <package id="Autofac" version="4.5.0" targetFramework="net461" />
+  <package id="EmptyKeysUI_MonoGame" version="3.0.0" targetFramework="net461" />
+  <package id="log4net" version="2.0.8" targetFramework="net461" />
+  <package id="MonoGame.Extended" version="0.6.377" targetFramework="net461" />
   <package id="MonoGame.Framework.WindowsDX" version="3.6.0.1625" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
 </packages>
