--- a/Ceriyo.Infrastructure.Tests/packages.config
+++ b/Ceriyo.Infrastructure.Tests/packages.config
@@ -2,8 +2,9 @@
 <packages>
   <package id="Castle.Core" version="4.0.0" targetFramework="net461" />
   <package id="CompareNETObjects" version="3.06.0.0" targetFramework="net461" />
-  <package id="MonoGame.Extended" version="0.5.149" targetFramework="net461" />
-  <package id="Moq" version="4.7.1" targetFramework="net461" />
+  <package id="MonoGame.Extended" version="0.6.377" targetFramework="net461" />
+  <package id="Moq" version="4.7.10" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
   <package id="NLua" version="1.3.2.1" targetFramework="net461" />
   <package id="NUnit" version="3.6.1" targetFramework="net461" />
   <package id="protobuf-net" version="2.1.0" targetFramework="net461" />
