--- a/Ceriyo.Tools.UIGenerator/Ceriyo.Tools.UIGenerator.csproj
+++ b/Ceriyo.Tools.UIGenerator/Ceriyo.Tools.UIGenerator.csproj
@@ -32,8 +32,8 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EmptyKeys.UserInterface.Designer, Version=2.6.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\EmptyKeysUI_Generator.2.6.0\lib\net45\EmptyKeys.UserInterface.Designer.dll</HintPath>
+    <Reference Include="EmptyKeys.UserInterface.Designer, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\EmptyKeysUI_Generator.3.0.0\lib\net45\EmptyKeys.UserInterface.Designer.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="PresentationCore" />
@@ -58,10 +58,12 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <Content Include="BehaviorsLicense.txt" />
+    <Content Include="Images\CeriyoLogo.png" />
+    <Content Include="license.txt" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Images\CeriyoLogo.png" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
