--- a/Ceriyo.Content/Ceriyo.Content.csproj
+++ b/Ceriyo.Content/Ceriyo.Content.csproj
@@ -58,6 +58,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Libraries\artemis.dll" />
+    <Content Include="UI\Images\CeriyoLogo.png" />
     <None Include="ResourcePacks\Default-Resources.rpk">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
