--- a/Ceriyo.Game.Windows/Ceriyo.Game.Windows.csproj
+++ b/Ceriyo.Game.Windows/Ceriyo.Game.Windows.csproj
@@ -39,15 +39,15 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Factory\GameFactory.cs" />
-    <Compile Include="Game1.cs" />
-    <Compile Include="GameInputService.cs" />
-    <Compile Include="GameIOCConfig.cs" />
+    <Compile Include="Factory\ClientGameFactory.cs" />
+    <Compile Include="ClientGame.cs" />
+    <Compile Include="ClientGameInputService.cs" />
+    <Compile Include="ClientGameIOCConfig.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screens\GameScreen.cs" />
     <Compile Include="Screens\MainMenuScreen.cs" />
-    <Compile Include="Services\GameService.cs" />
+    <Compile Include="Services\ClientGameService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="artemis">
