--- a/Ceriyo.Server.WPF/Ceriyo.Server.WPF.csproj
+++ b/Ceriyo.Server.WPF/Ceriyo.Server.WPF.csproj
@@ -148,12 +148,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Compile Include="Actions\BanAccountAction.cs" />
-    <Compile Include="Actions\BootPlayerAction.cs" />
     <Compile Include="Actions\PlayerConnectedAction.cs" />
     <Compile Include="Actions\PlayerDisconnectedAction.cs" />
-    <Compile Include="Actions\SendMessageAction.cs" />
-    <Compile Include="Actions\StopServerAction.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -168,6 +164,7 @@
     <Compile Include="ServerIOCConfig.cs" />
     <Compile Include="Services\ServerActionService.cs" />
     <Compile Include="Services\ServerGameService.cs" />
+    <Compile Include="Services\ServerSettingsService.cs" />
     <Compile Include="Views\ApplicationRootView\ApplicationRootViewModel.cs" />
     <Compile Include="Views\DescriptionView\Description.xaml.cs">
       <DependentUpon>Description.xaml</DependentUpon>
