--- a/Ceriyo.Infrastructure/packages.config
+++ b/Ceriyo.Infrastructure/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Autofac" version="4.5.0" targetFramework="net461" />
   <package id="AutoMapper" version="6.0.2" targetFramework="net461" />
+  <package id="EmptyKeysUI_MonoGame" version="3.0.0" targetFramework="net461" />
   <package id="FluentValidation" version="6.4.1" targetFramework="net461" />
   <package id="jint" version="2.10.4" targetFramework="net461" />
   <package id="Lidgren.Network" version="1.0.2" targetFramework="net461" />
