Remove server actions code (no longer necessary). Remove dependency on DetailsViewModel in ServerGame. Enable/disable controls based on whether server is currently running.

--- a/Ceriyo.Infrastructure.WPF/Ceriyo.Infrastructure.WPF.csproj
+++ b/Ceriyo.Infrastructure.WPF/Ceriyo.Infrastructure.WPF.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Behaviors\RepositionPopupBehavior.cs" />
     <Compile Include="Binding\BindingProxy.cs" />
     <Compile Include="Converters\BoolToFontWeightConverter.cs" />
+    <Compile Include="Converters\InverseBooleanConverter.cs" />
     <Compile Include="Helpers\TreeViewHelpers.cs" />
     <Compile Include="Observables\Contracts\IDataObservable.cs" />
     <Compile Include="BindableBases\ValidatableBindableBase.cs" />
