--- a/Ceriyo.Server.WPF.Tests/Ceriyo.Server.WPF.Tests.csproj
+++ b/Ceriyo.Server.WPF.Tests/Ceriyo.Server.WPF.Tests.csproj
@@ -47,6 +47,10 @@
       <HintPath>..\packages\CompareNETObjects.3.06.0.0\lib\net46\KellermanSoftware.Compare-NET-Objects.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="MonoGame.Framework, Version=3.6.0.1625, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MonoGame.Framework.WindowsDX.3.6.0.1625\lib\net40\MonoGame.Framework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Moq, Version=4.7.10.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <HintPath>..\packages\Moq.4.7.10\lib\net45\Moq.dll</HintPath>
       <Private>True</Private>
@@ -99,6 +103,8 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ServerGameServiceTests.cs" />
+    <Compile Include="Services\ServerSettingsServiceTests.cs" />
     <Compile Include="TestSetUp.cs" />
   </ItemGroup>
   <ItemGroup>
